# Team2_DART_FC_Firmware

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  DART_FC Debug.launch  DART_FC.ioc  README.md  Team2_DART_Firmware Debug.launch  Team2_DART_Firmware.ioc  makefile
.github/workflows/: build.yml
Core/Inc/: bmp388.h  main.h  mpu9250.h  stm32h7xx_it.h
Core/Src/: MahonyAHRS.c  bmp388.c  main.c  mpu9250.c  servo_algorithm_sim.py  stm32h7xx_hal_msp.c  stm32h7xx_it.c
Debug/: DART_FC.elf  DART_FC.list  DART_FC.map  Team2_DART_Firmware.elf  Team2_DART_Firmware.hex  Team2_DART_Firmware.list  Team2_DART_Firmware.map  makefile  objects.list  sources.mk
Debug/Core/Src/: MahonyAHRS.cyclo  MahonyAHRS.su  bmp388.cyclo  bmp388.d  bmp388.su  main.cyclo  main.d  main.su  mpu9250.cyclo  mpu9250.d  mpu9250.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su  stm32h7xx_it.cyclo  stm32h7xx_it.su  subdir.mk
Debug/Drivers/IMU_Drivers/: MPU6500.d  subdir.mk
Debug/Drivers/STM32H7xx_HAL_Driver/Src/: subdir.mk
Drivers/IMU_Drivers/: MPU6500.c  MPU6500.h
cmake/stm32cubemx/: CMakeLists.txt
